# fluffy_chess

./: Cargo.toml  cargo.toml
3d_board/: Cargo.toml  build.rs
3d_board/src/: main.rs  ui.rs
proto/: fluffy_chess_capnp.rs
schema/: fluffy_chess.capnp  fluffy_chess.proto
server/: Cargo.toml  Earthfile  build.rs
server/proto/: fluffy_chess_capnp.rs
server/src/: main.rs
src/: board.rs  main.rs  movement.rs  pieces.rs
